This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-Mar-2002 (Lars Duening)  (3.3.185)
    - (interpret.c) CHECK_OBJECT_REF: The destructed objects are now
        checked on F_RETURNs and after all efuns, in order to use
        fewer cycles.

16-Mar-2002 (Lars Duening)  (3.3.184)
    - (array.c) And this should be the last piece of code which made
        assumptions about free_svalue().
    - (func_spec, efuns) New efun blueprint().

12-Mar-2002 (Lars Duening)
    - (Makefiles) Changed default optimization level from High (-O4)
        to Medium (-O2), since compilers get notoriously unreliable
        at high optimization.

11-Mar-2002 (Lars Duening)  (3.3.183)
    - (simulate.c) The CHECK_OBJECT_REF check was still overzealous;
        unfortunately not with the FF mudlib I tested it with. Hmpf.
    - (xalloc.c) The heap/stack gap check didn't expect the stack to
        be located under the heap, as Cygwin does it.

10-Mar-2002 (Lars Duening)  (3.3.182)
    - (actions.c, simulate.c) The CHECK_OBJECT_REF check was overzealous
        and didn't track properly the changes in object sentences. Sorry.
    - (func_spec, object.c) Efun all_environment() did not accept destructed
        objects as argument as documented (reported by Pulami and Gnomi).

09-Mar-2002 (Lars Duening)  (3.3.181)
    - (xalloc) The implementation of the heap/stack check didn't work
        on architectures with really big address spaces - corrected that.
    - (mapping.c, interpret.c, object.c, efuns.c) When adding new values
        to mapping, the code didn't check if the memory could be allocated
        (reported by Menaures).
    - (doc/efun) More german translations from Pulami.

07-Mar-2002 (Lars Duening)  (3.3.180)
    - (xalloc, smalloc.c interpret.c, efuns.c, object.c) Added check
        to prevent the stack from growing into the heap.